<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_details_wrapper"
    tools:context=".activities.details.DetailsView">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDetails"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.Movies.Toolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                    android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginTop="24dp"
                tools:text="Título de la Película" />

            <TextView
                android:id="@+id/tvId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#A0A0A0"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                tools:text="#1234" />

            <ImageView
                android:id="@+id/imPoster"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:contentDescription="Poster"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Género:"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/imPoster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.1" />

            <TextView
                android:id="@+id/tvGenero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Duración:"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="@+id/textView7" />

            <TextView
                android:id="@+id/tvDuracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fecha de estreno:"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="@+id/textView8" />

            <TextView
                android:id="@+id/tvEstreno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Puntuación media:"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:layout_constraintStart_toStartOf="@+id/textView9" />

            <TextView
                android:id="@+id/tvPuntuacionMedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
                app:layout_constraintStart_toEndOf="@+id/textView12"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Puntuación sumaria:"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="@+id/textView12" />

            <TextView
                android:id="@+id/tvPuntuacionSumaria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                android:layout_marginStart="8dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>