<resources>
    <string name="app_name">ReelTok</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="info">Info</string>
    <string name="poster_del_film">Póster del film</string>
    <string name="a_o_de_estreno">Año de estreno:</string>
    <string name="duraci_n">Duración:</string>
    <string name="g_nero_s">Género(s):</string>
    <string name="puntuaci_n_media">Puntuación media:</string>
    <string name="puntuaci_n_sumaria">Puntuación sumaria:</string>
    <string name="filter_menu_title">Filtrar</string>
    <string name="filter_by_genre">Género</string>
    <string name="filter_by_decade">Década</string>
    <string name="filter_by_status">Estado</string>
    <string name="filter_limpiar">Limpiar</string>
    <string name="cancelar">Cancelar</string>
    <string name="aplicar">Aplicar</string>
    <string name="lista">Lista</string>
    <string name="columnaTitulo">Título</string>
    <string name="columnaEstado">Estado</string>
    <string name="columnaValoracion">Valoración</string>
    <string name="anhadir_a_mi_lista">Añadir a mi lista</string>
    <string name="valoracion_feliz">Valoración: Feliz</string>
    <string name="valoracion_neutro">Valoración: Neutral</string>
    <string name="valoracion_enfado">Valoración: Enfado</string>
    <string name="portada_pelicula">Portada pelicula</string>
    <string name="estadoPelicula">Estado:</string>
    <string name="valoracionPelicula">Valoración:</string>
    <string name="add_to_list">Agregar a la lista:</string>

</resources>